Add methods getLast() and getFirst() to TypeIntervalArray class